fix date on ios

--- a/pdf.css
+++ b/pdf.css
@@ -151,3 +151,7 @@ md-outlined-select {
 a.return {
     position: absolute;
 }
+
+a.return.mobile{
+    top: 0px;
+}
